20-sg/main.tf
#First creating security group with modules
#Second attaching dependent ports to security group using aws Security group rule

module "cluster" {
#source ="../../5.12.terraform-aws-securitygroup"
source ="git::https://github.com/rajalingarao/5.12.terraform-aws-securitygroup.git?ref=main"
project_name = var.project_name
environment =  var.environment
sg_description = "SG for EKS Control Plane"
vpc_id =  data.aws_ssm_parameter.vpc_id.value #We are getting the vpc_id from SSM parameter for Backend Security group
common_tags = var.common_tags
sg_name = "eks-control-plane"
}
module "node" {
#source ="../../5.12.terraform-aws-securitygroup"
source ="git::https://github.com/rajalingarao/5.12.terraform-aws-securitygroup.git?ref=main"
project_name = var.project_name
environment =  var.environment
sg_description = "SG for EKS node"
vpc_id =  data.aws_ssm_parameter.vpc_id.value #We are getting the vpc_id from SSM parameter for Backend Security group
common_tags = var.common_tags
sg_name = "eks-node"
}
module "bastion" {
#source ="../../5.12.terraform-aws-securitygroup"
source ="git::https://github.com/rajalingarao/5.12.terraform-aws-securitygroup.git?ref=main"
project_name = var.project_name
environment =  var.environment
sg_description = "SG for Bastion Instances"
vpc_id =  data.aws_ssm_parameter.vpc_id.value #We are getting the vpc_id from SSM parameter for Bastion Security group
common_tags = var.common_tags
sg_name = "bastion"
}

module "ingress" {
#source ="../../5.12.terraform-aws-securitygroup"
source ="git::https://github.com/rajalingarao/5.12.terraform-aws-securitygroup.git?ref=main"
project_name = var.project_name
environment =  var.environment
sg_description = "SG for Ingress Controller"
vpc_id =  data.aws_ssm_parameter.vpc_id.value #We are getting the vpc_id from SSM parameter for Backend Security group
common_tags = var.common_tags
sg_name = "ingress"
}

#Bastion can be accessed from public
resource "aws_security_group_rule" "bastion_public_22" {
    type = "ingress"
    from_port = 22
    to_port =  22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.bastion.sg_id
}
#EKS Cluster can be accessed form bastion host
resource "aws_security_group_rule" "cluster_bastion_443" {
    type = "ingress"
    from_port = 443
    to_port =  443
    protocol = "tcp"
    source_security_group_id = module.bastion.sg_id # source is where you are getting traffic from.
    security_group_id = module.cluster.sg_id  
}
#EKS Cluster plane accepting all traffic from nodes
resource "aws_security_group_rule" "cluster_node_0_65535" {
    type = "ingress"
    from_port = 0
    to_port =  65535
    protocol = "-1" # All traffic
    source_security_group_id = module.node.sg_id # source is where you are getting traffic from.
    security_group_id = module.cluster.sg_id  
}
#EKS nodes accepting all traffic from control plane
resource "aws_security_group_rule" "node_cluster_0_65535" {
    type = "ingress"
    from_port = 0
    to_port =  65535
    protocol = "-1" # All traffic
    source_security_group_id = module.cluster.sg_id 
    security_group_id = module.node.sg_id  
}
#EKS nodes should accept all traffic from nodes with in VPC CIDR range
resource "aws_security_group_rule" "node_vpc_0_65535" {
    type = "ingress"
    from_port = 0
    to_port =  65535
    protocol = "-1" # All traffic
    cidr_blocks = ["10.0.0.0/16"]
    security_group_id = module.node.sg_id  
}

#node can be accessed form bastion host
resource "aws_security_group_rule" "node_bastion_22" {
    type = "ingress"
    from_port = 22
    to_port =  22
    protocol = "tcp"
    source_security_group_id = module.bastion.sg_id # source is where you are getting traffic from.
    security_group_id = module.node.sg_id  
}
# #Node is accepting  traffic from ingress
resource "aws_security_group_rule" "node_ingress" {
    type = "ingress"
    from_port = 30000
    to_port =  32768
    protocol = "tcp" #All traffic
    source_security_group_id = module.ingress.sg_id # source is where you are getting traffic from.
    security_group_id = module.node.sg_id  
}

#Ingress ALB accepting traffic on 443
resource "aws_security_group_rule" "ingress_public_https" {
    type = "ingress"
    from_port = 443
    to_port =   443
    protocol = "tcp" # All traffic
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.ingress.sg_id  
}
# #Ingress ALB accepting traffic on 80
resource "aws_security_group_rule" "ingress_public_http" {
    type = "ingress"
    from_port = 80
    to_port =   80
    protocol = "tcp" # All traffic
    cidr_blocks = ["0.0.0.0/0"]
    security_group_id = module.ingress.sg_id  
}
